--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
 .header {
+	font-family: 'Georgia', Times, Times New Roman, Serif;
+
 
 }
 
@@ -8,5 +10,13 @@
 }
 
 body {
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+h2 {
 	
+}
+
+h3 {
+	font-family: 'Georgia', Times, Times New Roman, Serif;
 }
