--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,23 @@
 .header {
 	font-family: 'Georgia', Times, Times New Roman, Serif;
-
+	background-color: #ffffff;
+	border-color: #cccccc;
 
 }
 
 
 .footer {
-
+	background-color: #666666;
 }
 
 body {
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	background-color: #ffffff;
+	border-color: #dddddd;
 }
 
 h2 {
-	
+	font-family: 'Georgia', Times, Times New Roman, Serif;
 }
 
 h3 {
